crates/oxc_react_compiler/tests/snapshots/optional-member-expression-call-as-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-member-expression-call-as-property.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(3);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makeObject();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	let t1;
	if ($[1] !== props) {
		t1 = x?.[foo(props.value)];
		$[1] = props;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
