crates/oxc_react_compiler/tests/snapshots/optional-member-expression-chain.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-member-expression-chain.js
---
import { c as _c } from "react/compiler-runtime";
// Note that `a?.b.c` is semantically different from `(a?.b).c`
// We should codegen the correct member expressions
function Component(props) {
	const $ = _c(3);
	const x = props?.b.c;
	const y = props?.b.c.d?.e.f.g?.h;
	let t0;
	if ($[0] !== x || $[1] !== y) {
		t0 = {
			x,
			y
		};
		$[0] = x;
		$[1] = y;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
