crates/oxc_react_compiler/tests/snapshots/optional-member-expression-with-optional-member-expr-as-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-member-expression-with-optional-member-expr-as-property.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makeObject();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	return x.y?.[props.a?.[props.b?.[props.c]]];
}
