crates/oxc_react_compiler/tests/snapshots/optional-member-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-member-expression.js
---
import { c as _c } from "react/compiler-runtime";
function Foo(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.a) {
		t0 = bar(props.a);
		$[0] = props.a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	const y = x?.b;
	const z = useBar(y);
	return z;
}
